# rust-stainless

./: .gitignore  .stainless-version  Cargo.toml  Dockerfile  NOTES  README.md  rust-toolchain  rustc_to_stainless  stainless-rust-interop.code-workspace
.github/workflows/: rust.yml
demo/: Cargo.toml  align.rs  fact.rs  mean.rs
demo/examples/: adts.rs  blocks.rs  external_fn.rs  fact.rs  fact_bigint.rs  generic_id.rs  generic_option.rs  generic_result.rs  hof_simple.rs  insertion_sort.rs  int_option.rs  list_binary_search.rs  lists.rs  mean.rs  mut_local_fields.rs  nested_spec.rs  thesis_example.rs  tuples.rs  type_class.rs  type_class_specs.rs
demo/examples_wip/: fact_bigint.rs  lists.rs  mean.rs  methods.rs  no_interior_mut_trait.rs  ref_eq.rs  ref_erasable_trait.rs  switch_int.rs
demo/src/: list.rs  main.rs
examples/: fact.rs  fact_bigint.rs  lists.rs  simple_refs.rs  tuples.rs
libstainless/: Cargo.toml  lib.rs
libstainless/src/: lib.rs  map.rs  set.rs
libstainless_macros/: Cargo.toml  implementation.rs  lib.rs
libstainless_macros/src/: implementation.rs  lib.rs  spec.rs
libstainless_specs/: Cargo.toml  lib.rs  specs.rs
rbtree/: Cargo.toml
rbtree/src/: main.rs
scripts/: rustc_to_stainless
stainless_backend/: Cargo.toml
stainless_backend/src/: lib.rs  messages.rs
stainless_backend/tests/: stainless_run_tests.rs
stainless_backend/tests/examples/: mod.rs
stainless_contracts/: Cargo.toml
stainless_contracts/src/: lib.rs
stainless_contracts/tests/: basic.rs
stainless_data/: Cargo.toml
stainless_data/src/: ast.rs  lib.rs  ser.rs
stainless_data/src/ast/: generated.rs  macros.rs  mod.rs  pretty.rs
stainless_driver/: Cargo.toml
stainless_driver/src/: extraction.rs  lib.rs
stainless_driver/src/extraction/: bindings.rs  expr.rs  extractor.rs  extractor_rules.rs  flags.rs  krate.rs  literal.rs  mod.rs  ty.rs
stainless_extraction/: Cargo.toml
stainless_extraction/src/: bindings.rs  classes.rs  expr.rs  flags.rs  fns.rs  krate.rs  lib.rs  literal.rs  spec.rs  std_items.rs  syn.rs  synth.rs  ty.rs  utils.rs
stainless_extraction/src/expr/: block.rs  field.rs  literal.rs  map.rs  mod.rs  ops.rs  pattern.rs  refs.rs  set.rs  spec.rs  tuple.rs
stainless_extraction/src/synth/: copy.rs  mod.rs  mut_cell.rs  mut_ref.rs  std_option.rs  tuple.rs
stainless_frontend/: Cargo.toml
stainless_frontend/src/: lib.rs
stainless_frontend/tests/: extraction_tests.rs
stainless_frontend/tests/fail/: box_as_ref.rs  deref_non_box.rs  double_measure.rs  double_measure_impl.rs  liskov_rectangle.rs  mut_borrow_ref.rs  mut_clone.rs  mut_immutable_field.rs  mut_lets.rs  mut_params.rs  mut_ref_borrow_4.rs  mut_ref_clone.rs  mut_ref_nested.rs  mut_ref_tuple.rs  nested_spec_impl.rs  return_in_cond.rs  return_in_guard.rs  strings_methods.rs  switch_int.rs  switch_ref.rs  user_deref.rs
stainless_frontend/tests/pass/: adt_use_before_declare.rs  adts.rs  blocks.rs  boxes.rs  cast_correctness.rs  clone.rs  clone_equality.rs  double_ref_param.rs  external_fn.rs  fact.rs  fn_ref_param.rs  generic_id.rs  generic_option.rs  generic_result.rs  impl_fns.rs  impl_mut_spec.rs  implementations.rs  implies.rs  insertion_sort.rs  int_operators.rs  int_option.rs  let_type.rs  list_binary_search.rs  map_ops.rs  monoid.rs  mut_clone.rs  mut_local_fields.rs  mut_local_lets.rs  mut_local_params.rs  mut_mem_replace.rs  mut_old.rs  mut_params.rs  mut_ref_borrow_0.rs  mut_ref_borrow_1.rs  mut_ref_borrow_10.rs  mut_ref_borrow_11.rs  mut_ref_borrow_2.rs  mut_ref_borrow_3.rs  mut_ref_borrow_5.rs  mut_ref_borrow_6.rs  (+30 more)
stainless_frontend/tests/utilities/: mod.rs
stainless_macros/: Cargo.toml
stainless_macros/src/: lib.rs
stainless_macros/tests/: basic.rs
