[package]
name = "stainless"
version = "0.0.1"
edition = "2018"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
description = "Stainless library"
categories = ["development-tools"]

[lib]
name = "stainless"
test = false
doctest = false

[dependencies]
num-bigint = "0.2.6"
im = "15.0.0"
stainless_macros = { path = "../libstainless_macros" }
