[package]
name = "stainless_macros"
version = "0.0.1"
edition = "2018"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
description = "Stainless specification macros"
categories = ["development-tools"]

[lib]
name = "stainless_macros"
path = "lib.rs"
test = false
doctest = false
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
