[package]
name = "stainless_contracts"
version = "0.1.0"
authors = ["Ivan Yurov <ivan.youroff@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.17", features = ["full", "extra-traits"] }
quote = "1.0.3"
proc-macro2 = "*"

[[test]]
name = "basic"
path = "tests/basic.rs"
