[package]
name = "stainless_data"
version = "0.0.1"
edition = "2018"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
description = "Stainless driver for rustc"
categories = ["development-tools"]

[lib]
doctest = false

[dependencies]
bumpalo = "<3.3"
env_logger = "0.7"
lazy_static = "1.4.0"
num-bigint = "0.2.6"

[features]
default = []
