[package]
name = "stainless_driver"
version = "0.0.1"
edition = "2018"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
description = "Data structures and serializer for Stainless ASTs"
categories = ["development-tools"]

[dependencies]
stainless_data = { path = "../stainless_data" }
env_logger = "0.7.1"

[features]
default = []
