[package]
name = "stainless_driver"
version = "0.0.1"
edition = "2018"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
description = "Data structures and serializer for Stainless ASTs"
categories = ["development-tools"]

[dependencies]
stainless_data = { path = "../stainless_data" }
clap = "2.33.1"
env_logger = "0.7.1"
serde_json = "1.0"

[features]
default = []
