[package]
name = "stainless_extraction"
version = "0.0.1"
edition = "2018"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
description = "Extraction from rustc to stainless trees"
categories = ["development-tools"]

[lib]
doctest = false

[dependencies]
stainless_data = { path = "../stainless_data" }
lazy_static = "1.4.0"
enum-iterator = "0.6.0"

[features]
default = []
