[package]
name = "stainless_frontend"
version = "0.0.1"
edition = "2018"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
description = "A Rust frontend for the Stainless program verifier"
categories = ["development-tools"]

[dependencies]
stainless_data = { path = "../stainless_data" }
stainless_extraction = { path = "../stainless_extraction" }
clap = "2.33.1"
env_logger = "0.7.1"
serde_json = "1.0"

[features]
default = []
